
2025-05-19  David Declerck <david.declerck@ocamlpro.com>

	* cobc.c (set_compile_date): fix SOURCE_DATE_EPOCH being
	  ignored on subsequent invocations

2025-04-18  David Declerck <david.declerck@ocamlpro.com>

	* codegen.c (output_funcall_typed): add an integer cast
	  to work around warnings about extra parentheses

2025-04-07  David Declerck <david.declerck@ocamlpro.com>

	* typeck.c (cb_validate_collating): make casts with loss of data
	  explicit using masking to silence the MSVC runtime error checker

2025-04-04  David Declerck <david.declerck@ocamlpro.com>

	* cobc.c (process_filename): ensure we don't keep the preprocessed
	  file when using -M or -fcopybook-deps
	* cobc.c, cobc.h, help.c, pplex.l: make -fcopybook-deps an experimental
	  feature, activable with the EXPERIMENTAL_COPYBOOK_DEPS_OPTION flag

2025-03-26  David Declerck <david.declerck@ocamlpro.com>

	* gentable.c: generate EBCDIC/ASCII translation tables
	* cobc.c, help.c: new --gentable option

2024-12-09  Simon Sobisch <simonsobisch@gnu.org>

	* Makefile.am (cobc.1): add description using help2man -n

2024-12-08  Simon Sobisch <simonsobisch@gnu.org>

	* cobc.c (process_command_line): fix leak for --copy and -include parsing

2024-11-06  David Declerck <david.declerck@ocamlpro.com>

	Reverted change 2022-02-20 to integrate change
	from GnuCOBOL 3.1 2023-04-04
	* tree.h (cb_field): new flag_above_unbounded
	* tree.c (cb_field_has_unbounded), tree.h: removed; use
	  flag_above_unbounded in callers (typeck.c, cobc.c) instead
	* parser.y (occurs_clause): set flag_above_unbounded in parents

2024-10-30  Chuck Haatvedt <chuck.haatvedt+cobol@gmail.com>

	* typeck.c=>libcob/sysdefines.h: define [WITH_EXTENDED_SCREENIO]
	  for any curses headers available, which now includes panel.h
	  definitions

2024-10-23  David Declerck <david.declerck@ocamlpro.com>

	* codegen.c (output_perform_until): improve PERFORM bounds
	  checking (disabled for now)
	* typeck.c (cb_emit_set_to): remove check for integer